--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,3 +25,15 @@ body {
     text-wrap: balance;
   }
 }
+
+.scrollbar-hide {
+  -ms-overflow-style: none;
+  /* IE and Edge */
+  scrollbar-width: none;
+  /* Firefox */
+}
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+  /* Chrome, Safari and Opera */
+}
